--- a/estilos.css
+++ b/estilos.css
@@ -3,6 +3,10 @@ h1, h2{
 }
 h1{ 
 font-size: 4em;
+background-color: red;
+border:solid 10px;
+border-color: blue;
+margin: 10px 20px 30px 40px;
 }
 li {
     font-style: italic;
