--- a/estilos.css
+++ b/estilos.css
@@ -21,3 +21,12 @@ li {
 span.contact{
     color:green;
 }
+
+body {
+    display:flex;
+    justify-content: center;
+}
+.wrapper{
+    width: 80%;
+    background: burlywood;
+}
