--- a/estilos.css
+++ b/estilos.css
@@ -7,6 +7,7 @@ background-color: red;
 border:solid 10px;
 border-color: blue;
 margin: 10px 20px 30px 40px;
+padding: 100px;
 }
 li {
     font-style: italic;
