--- a/src/styles/estilos.css
+++ b/src/styles/estilos.css
@@ -43,14 +43,15 @@ img{
     color: aliceblue;
     display:block;
 }
-.habilidades{
-    /*float:right;*/
+.habilidades >section{
+    display:flex;
+    justify-content:flex-end;
     
 }
 
 .experiencia {
     
-
+}
 .experiencia > section {
     width: 50%;
 }
