--- a/src/styles/estilosBlog.css
+++ b/src/styles/estilosBlog.css
@@ -5,13 +5,13 @@
     padding: 10px;
     
 }
+
 .recuadroNoticia{
     border: solid 5px;
     border-color:blue;
    
-   
 }
-.menu ul{
+.enlinea{
     display:inline;
     
 }
