--- a/src/styles/estilosFormularioContacto.css
+++ b/src/styles/estilosFormularioContacto.css
@@ -1,7 +1,7 @@
 textarea{
     background-color: #fbfbfb; 
-    width: 405px; 
-    height: 150px; 
+    /*width: 405px; 
+    height: 150px;*/ 
     border-radius: 15px;  
     border-style: solid; 
     border-width: 1px; 
