--- a/src/styles/estilosCurriculum.css
+++ b/src/styles/estilosCurriculum.css
@@ -43,15 +43,17 @@ img{
     color: aliceblue;
     display:block;
 }
-.habilidades >section{
-    display:flex;
-    justify-content:flex-end;
-    
+.habilidades{
+    display:inline-table;
+    width:48%;
+    background-color: aqua;
+    background-color: rgb(0, 110, 255);
+    border:solid 3px;
+    border-color: rgb(55, 0, 255);
+    color:white;
 }
 
-.experiencia > section {
-    width: 50%;
-}
-.experiencia > section > * {
-
+.experiencia{
+    display:inline-table;
+    width: 48%;
 }
